--- a/userprofiles/templates/userprofiles/register.html
+++ b/userprofiles/templates/userprofiles/register.html
@@ -6,7 +6,9 @@
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Create an Account</legend>
-                {{ form|crispy }}
+
+            {{ form.as_p }}
+            {{ profile_form.as_p }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Sign Up</button>
