password change-reset

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+
 {% load crispy_forms_tags %}
 
 {% block content %}
@@ -11,6 +13,8 @@
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Login</button>
             </div>
+            <a href="{% url 'password_reset' %}" class="btn btn-link">Forgot your password?</a>
+
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
