--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+
 {% load crispy_forms_tags %}
 
 {% block content %}
@@ -15,9 +17,9 @@
             </div>
         </form>
         <div class="border-top pt-3">
-            <small class="text-muted">
-                Already Have An Account? <a class="ml-2" href="{% url 'login' %}">Sign In</a>
-            </small>
+            <div class="text-muted">
+                Already Have An Account?<a class="ml-2" href="{% url 'login' %}">Sign In</a>
+            </div>
         </div>
     </div>
 {% endblock content %}
