--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -23,7 +23,7 @@
     </div>
 
     <p><strong>-- Social Media --</strong></p>
-    <a href="{% url 'social:begin' 'facebook' %}?next={{ request.path }}">Login with Facebook</a>
+    <a href="{% url 'social:begin' 'facebook' %}">Login with Facebook</a>
     <br>
     <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a>
 </div>
