--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,10 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
               <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'profile-update' %}">Update Profile</a>
+              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'upload' %}">Make a Donation</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
