--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -1,7 +1,33 @@
 {% extends 'base.html' %}
 
-{% load crispy_forms_tags %}
+{% load crispy_forms_tags %} 
+
 {% block content %}
-<h1>This is the {{ user.username }} 's profile</h1>
-<a href="{% url 'logout' %}">Log out</a>
+    <!-- Begin Page Content -->
+    <div class="container-fluid">
+
+        <!-- Page Heading -->
+        <div class="d-sm-flex align-items-center justify-content-between mb-4 mt-4">
+        <h1 class="h3 mb-0 text-gray-800">Profile</h1>
+        </div>          
+        <!-- Main Content Here -->
+        <div class="row">
+          <div class="col-lg-2"></div>
+          <div class="card o-hidden border-0 shadow-lg my-5 col-lg-5">
+            <div class="card-body">
+                <h2>{{user.first_name}} {{user.last_name}}</h2>
+                <p><strong>Username: </strong> {{user.username}} </p>
+                <p><strong>Email: </strong> {{user.email}} </p>
+                <p><strong>Location: </strong> {{userprofile.location}} </p>
+                <p><strong>Phone Number: </strong> {{userprofile.number}} </p>
+                <p><strong>User_type: </strong> {{userprofile.user_type}} </p>
+                <a href="{% url 'profile-update' %}" class="btn btn-sm btn-primary shadow-sm">Update Profile</a>
+            </div>
+          </div>
+        </div>
+        
+        
+        
+    </div>
+    <!-- /.container-fluid -->
 {% endblock content %}
