--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="{% url 'profile-update' %}">Update Profile</a>
+              <a class="dropdown-item" href="{% url 'edit_profile' %}">Update Profile</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'upload' %}">Make a Donation</a>
               <div class="dropdown-divider"></div>
