--- a/templates/registration/edit_profile.html
+++ b/templates/registration/edit_profile.html
@@ -21,10 +21,10 @@
                   <div class="text-center">
                     <h1 class="h4 text-gray-900 mb-4">Update Your Profile!</h1>
                   </div>
-                  <form method="POST" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {{updateform | crispy}}
-                    {{updateprofile_form | crispy}}
+                  <form method="POST">
+                      {% csrf_token %}
+                      {{form | crispy}}
+                      {{profile_form | crispy}}
                     <button type="submit" class="btn btn-success btn-block">Update</button>
                   </form>
                   <hr>
