--- a/templates/base.html
+++ b/templates/base.html
@@ -46,8 +46,11 @@
               <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
-              <a class="dropdown-item" href="{% url 'edit_profile' %}">Update Profile</a>             <div class="dropdown-divider"></div>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="{% url 'edit_profile' %}">Update Profile</a>   
+              <div class="dropdown-divider"></div>          
               <a class="dropdown-item" href="{% url 'upload' %}">Make a Donation</a>
+              <a class="dropdown-item" href="{% url 'myproducts' %}">My Products</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
             </div>
