--- a/templates/registration/myproducts.html
+++ b/templates/registration/myproducts.html
@@ -11,10 +11,11 @@
         <h1 class="h3 mb-0 text-gray-800">My Products</h1>
     </div>
     <!-- Main Content Here -->
-    <table id="example" class="table table-striped table-bordered" style="width:100%">
-        <thead>
+    <table id="example" class="table table-bordered" style="width:100%">
+        <thead class="thead-light">
             <tr>
                 <th>Category</th>
+                <th>Subcategory</th>
                 <th>Title</th>
                 <th>Description</th>
                 <th>State_type</th>
@@ -24,12 +25,13 @@
         <tbody>
             {% for product in products %}
             <tr>
-                {{product.category}}
-                {{product.title}}
-                {{product.description}}
-                {{product.state_type}}
+                <td>{{product.category}}</td>
+                <td>{{product.subcategory}}</td>
+                <td>{{product.title}}</td>
+                <td>{{product.description}}</td>
+                <td>{{product.state_type}}</td>
                 {% if product.image %}
-                <img src="{{ product.image.url }}" width="240px">
+                <td><img src="{{ product.image.url }}" width="200px"></td>
                 {% endif %}
                 <br>
             </tr>
