--- a/templates/registration/upload.html
+++ b/templates/registration/upload.html
@@ -1,19 +1,47 @@
 {% extends 'base.html' %}
-
+{% load static %}
 {% load crispy_forms_tags %}
 
 {% block content %}
 <div class="content-section">
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Make a Donation</legend>
-            {{ form.as_p }}
-        </fieldset>
-        <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Upload</button>
-        </div>
-    </form>
-
+  <form method="POST" id="productForm" data-subcategories-url="{% url 'load_subcategories' %}" enctype="multipart/form-data">
+    {% csrf_token %}
+    <fieldset class="form-group">
+      <legend class="border-bottom mb-4">Make a Donation</legend>
+      <table>
+        {{ form.as_table }}
+      </table>
+    </fieldset>
+    <div class="form-group">
+      <button class="btn btn-outline-info" type="submit">Upload</button>
+    </div>
+  </form>
 </div>
+
 {% endblock content %}
+{% block extrajs %}
+<script>
+  $("#id_category").change(function () {
+    var url = $("#productForm").attr("data-subcategories-url");
+    var categoryId = $(this).val();
+    console.log(url);
+    console.log(categoryId);
+
+
+    $.ajax({
+      url: url,
+      data: {
+        'category': categoryId
+      },
+      success: function (data) {
+        console.log('--');
+        console.log(data);
+        console.log('__');
+
+        $("#id_subcategory").html(data);
+      }
+    });
+
+  });
+</script>
+{% endblock %}
