--- a/templates/base.html
+++ b/templates/base.html
@@ -45,12 +45,10 @@
               {{ user.username }}
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
-              <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'edit_profile' %}">Update Profile</a>   
-              <div class="dropdown-divider"></div>          
+              <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
+              <div class="dropdown-divider"></div>         
               <a class="dropdown-item" href="{% url 'upload' %}">Make a Donation</a>
               <a class="dropdown-item" href="{% url 'myproducts' %}">My Products</a>
               <div class="dropdown-divider"></div>
@@ -73,7 +71,7 @@
     {% endblock %}
   </div>
 
-  <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
@@ -81,7 +79,7 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script> -->
+    crossorigin="anonymous"></script>
     {% block js %}
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
