--- a/templates/registration/upload.html
+++ b/templates/registration/upload.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 <div class="content-section">
-  <form method="POST" id="productForm" data-subcategories-url="{% url 'load_subcategories' %}" enctype="multipart/form-data">
+  <form method="POST" id="productForm" data-subcategories-url="{% url 'load_subcategories' %}"
+    enctype="multipart/form-data">
     {% csrf_token %}
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">Make a Donation</legend>
@@ -24,9 +25,6 @@
   $("#id_category").change(function () {
     var url = $("#productForm").attr("data-subcategories-url");
     var categoryId = $(this).val();
-    console.log(url);
-    console.log(categoryId);
-
 
     $.ajax({
       url: url,
@@ -34,9 +32,6 @@
         'category': categoryId
       },
       success: function (data) {
-        console.log('--');
-        console.log(data);
-        console.log('__');
 
         $("#id_subcategory").html(data);
       }
