--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -21,7 +21,7 @@
                 <p><strong>Location: </strong> {{user.userprofile.location}} </p>
                 <p><strong>Phone Number: </strong> {{user.userprofile.number}} </p>
                 <p><strong>User_type: </strong> {{user.userprofile.user_type}} </p>
-                <a href="{% url 'edit_profile' %}" class="btn btn-sm btn-primary shadow-sm">Update Profile</a>
+                <a href="{% url 'edit_profile' %}" class="btn btn-sm btn-primary shadow-sm"><i class="fa fa-pencil-square-o" style="font-size:20px"></i> Edit Profile</a>
             </div>
           </div>
         </div>
