--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <title>{% block title %}My Site{% endblock %}</title>
   <style type="text/css">
     .asteriskField {
@@ -42,24 +43,26 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
-              {{ user.username }}
+              {{ user.first_name }} {{ user.last_name }}
+
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="{% url 'profile' %}">Profile</a>
-              <a class="dropdown-item" href="{% url 'edit_profile' %}">Update Profile</a>   
-              <a class="dropdown-item" href="{% url 'password_change' %}">Change password</a>
+              <a class="dropdown-item" href="{% url 'profile' %}"><i class="fa fa-user-circle" style="font-size:20px"></i> Profile</a>
+              <a class="dropdown-item" href="{% url 'edit_profile' %}"><i class="fa fa-vcard" style="font-size:20px"></i> Edit Profile</a>   
+              <a class="dropdown-item" href="{% url 'password_change' %}"><i class="fa fa-lock" style="font-size:20px"></i> Change password</a>
               <div class="dropdown-divider"></div>         
-              <a class="dropdown-item" href="{% url 'upload' %}">Make a Donation</a>
-              <a class="dropdown-item" href="{% url 'myproducts' %}">My Products</a>
+              <a class="dropdown-item" href="{% url 'upload' %}"><i class="fa fa-upload" style="font-size:20px"></i> Make a Donation</a>
+              <a class="dropdown-item" href="{% url 'products' %}"><i class="fa fa-shopping-cart" style="font-size:20px"></i> All Products</a>
+              <a class="dropdown-item" href="{% url 'myproducts' %}"><i class="fa fa-shopping-basket" style="font-size:20px"></i> My Products</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="{% url 'logout' %}">Log out</a>
+              <a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-sign-out" style="font-size:20px"></i> Log out</a>
             </div>
           </li>
         </ul>
         {% else %}
         <form class="form-inline my-2 my-lg-0">
-          <a href="{% url 'login' %}" class="btn btn-outline-secondary">Log in</a>
-          <a href="{% url 'register' %}" class="btn btn-primary ml-2">Sign up</a>
+          <a href="{% url 'login' %}" class="btn btn-outline-secondary"><i class="fa fa-sign-in" style="font-size:20px"></i> Log in</a>
+          <a href="{% url 'register' %}" class="btn btn-primary ml-2"><i class="fa fa-user-plus" style="font-size:20px"></i> Sign up</a>
         </form>
         {% endif %}
       </div>
