--- a/templates/home.html
+++ b/templates/home.html
@@ -4,6 +4,6 @@
 <h2>Homepage</h2>
 <p>Welcome to My Site, {% if user.is_authenticated %}{{ user.username }}{% else %}visitor{% endif %}!</p>
 <p>
-  <strong>Total users registered: </strong> {{ count }}
+  <strong>Total users registered: </strong> <i class="fa fa-users" style="font-size:20px"></i> {{ count }}
 </p>
 {% endblock %}
