--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -22,12 +22,11 @@
                             <div class="col-lg-6 d-none d-lg-block">
                                 <div class="p-5">
                                     <h3 class="page-header">Email Account!</h3>
-
                                     <form method="POST">
                                         {% csrf_token %}
                                         {{form | crispy}}
                                         <button type="submit" class="btn btn-default">
-                                            <i class="fa fa-sign-in"></i>Log in</button>
+                                            <i class="fa fa-sign-in"></i> Log in</button>
                                         <input type="hidden" name="next" value="{{ next }}"/>
                                     </form>
                                     <hr>
@@ -48,12 +47,12 @@
                                             <!-- facebook login button -->
                                             <p><a class="btn"
                                                     style="width: 180px; margin-top: 10px; background-color: #3b5998; color: #ffffff"
-                                                    href="{% url 'social:begin' 'facebook' %}"> Login with Facebook
+                                                    href="{% url 'social:begin' 'facebook' %}"> <i class="fa fa-facebook"></i> Login with Facebook
                                                 </a></p>
                                             <!-- google+ login button -->
                                             <p><a class="btn"
                                                     style="width: 180px; margin-top: 10px; background-color: #dd4b39; color: #ffffff"
-                                                    href="{% url 'social:begin' 'google-oauth2' %}"> Login with Google
+                                                    href="{% url 'social:begin' 'google-oauth2' %}"> <i class="fa fa-google"></i> Login with Google
                                                 </a></p>
                                         </form>
                                     </div>
