--- a/templates/registration/products.html
+++ b/templates/registration/products.html
@@ -14,6 +14,7 @@
     <table id="example" class="table table-bordered" style="width:100%">
         <thead class="thead-light">
             <tr>
+                <th>User</th>
                 <th>Category</th>
                 <th>Subcategory</th>
                 <th>Title</th>
@@ -24,8 +25,9 @@
             </tr>
         </thead>
         <tbody>
-            {% for product in products %}
+            {% for product in allproducts %}
             <tr>
+                <td>{{product.user}}</td>
                 <td>{{product.category}}</td>
                 <td>{{product.subcategory}}</td>
                 <td>{{product.title}}</td>
@@ -43,37 +45,4 @@
         </tbody>
     </table>
 </div>
-
-<!-- The Modal -->
-<div id="myModal" class="modal">
-    <span class="close">&times;</span>
-    <img class="modal-content" id="img01">
-    <div id="caption"></div>
-</div>
-
-<script>
-    // Get the modal
-    var modal = document.getElementById("myModal");
-
-    // Get the image and insert it inside the modal - use its "alt" text as a caption
-    var img = document.getElementById("myImg");
-    var modalImg = document.getElementById("img01");
-    var captionText = document.getElementById("caption");
-    img.onclick = function () {
-        modal.style.display = "block";
-        modalImg.src = this.src;
-        captionText.innerHTML = this.alt;
-    }
-
-    // Get the <span> element that closes the modal
-    var span = document.getElementsByClassName("close")[0];
-
-    // When the user clicks on <span> (x), close the modal
-    span.onclick = function () {
-        modal.style.display = "none";
-    }
-</script>
-
-</div>
-<!-- /.container-fluid -->
 {% endblock content %}
