--- a/templates/registration/upload.html
+++ b/templates/registration/upload.html
@@ -14,7 +14,7 @@
       </table>
     </fieldset>
     <div class="form-group">
-      <button class="btn btn-outline-info" type="submit">Upload</button>
+      <button class="btn btn-outline-info" type="submit"><i class="fa fa-plus" style="font-size:20px"></i> Upload</button>
     </div>
   </form>
 </div>
