--- a/templates/base.html
+++ b/templates/base.html
@@ -48,12 +48,19 @@
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{% url 'profile' %}"><i class="fa fa-user-circle" style="font-size:20px"></i> Profile</a>
-              <a class="dropdown-item" href="{% url 'edit_profile' %}"><i class="fa fa-vcard" style="font-size:20px"></i> Edit Profile</a>   
-              <a class="dropdown-item" href="{% url 'password_change' %}"><i class="fa fa-lock" style="font-size:20px"></i> Change password</a>
-              <div class="dropdown-divider"></div>         
+              <a class="dropdown-item" href="{% url 'edit_profile' %}"><i class="fa fa-vcard" style="font-size:20px"></i> Edit Profile</a>
+              {% if user.userprofile.user_type == 'NGO'%} <!-- and user.userprofile.last_login == user.userprofile.date_joined %}-->    
+              <a class="dropdown-item" href="{% url 'ngodetails' %}"><i class="fa fa-file-pdf-o" style="font-size:20px"></i> Ngo details</a>
+              {% endif %}
+              {% if user.is_authenticated and not backends.associated %}   
+                <a class="dropdown-item" href="{% url 'password_change' %}"><i class="fa fa-lock" style="font-size:20px"></i> Change password</a>
+              {% endif %}
+                <div class="dropdown-divider"></div>         
+              {% if user.userprofile.user_type == 'CIVILIAN' %}    
               <a class="dropdown-item" href="{% url 'upload' %}"><i class="fa fa-upload" style="font-size:20px"></i> Make a Donation</a>
-              <a class="dropdown-item" href="{% url 'products' %}"><i class="fa fa-shopping-cart" style="font-size:20px"></i> All Products</a>
               <a class="dropdown-item" href="{% url 'myproducts' %}"><i class="fa fa-shopping-basket" style="font-size:20px"></i> My Products</a>
+              {% endif %}
+              <a class="dropdown-item" href="{% url 'products' %}"><i class="fa fa-shopping-cart" style="font-size:20px"></i> All Products</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-sign-out" style="font-size:20px"></i> Log out</a>
             </div>
