--- a/templates/registration/myproducts.html
+++ b/templates/registration/myproducts.html
@@ -7,8 +7,10 @@
 <div class="container-fluid">
 
     <!-- Page Heading -->
-    <div class="d-sm-flex align-items-center justify-content-between mb-4 mt-4">
-        <h1 class="h3 mb-0 text-gray-800">My Products</h1>
+    <div class="card card-body">
+        <h5>My Products</h5>
+        <hr>
+        <h1 style="text-align: center;padding: 10px">{{total_myproduct}}</h1>
     </div>
     <!-- Main Content Here -->
     <table id="example" class="table table-bordered" style="width:100%">
