--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -9,19 +9,20 @@
         <!-- Page Heading -->
         <div class="d-sm-flex align-items-center justify-content-between mb-4 mt-4">
         <h1 class="h3 mb-0 text-gray-800">Profile</h1>
-        </div>          
+        </div>
+                  
         <!-- Main Content Here -->
         <div class="row">
           <div class="col-lg-2"></div>
           <div class="card o-hidden border-0 shadow-lg my-5 col-lg-5">
             <div class="card-body">
-                <h2>{{user.first_name}} {{user.last_name}}</h2>
+              <h2>{{user.first_name}} {{user.last_name}}</h2>                
                 <p><strong>Username: </strong> {{user.username}} </p>
                 <p><strong>Email: </strong> {{user.email}} </p>
                 <p><strong>Location: </strong> {{user.userprofile.location}} </p>
                 <p><strong>Phone Number: </strong> {{user.userprofile.number}} </p>
                 <p><strong>User_type: </strong> {{user.userprofile.user_type}} </p>
-                <a href="{% url 'edit_profile' %}" class="btn btn-sm btn-primary shadow-sm"><i class="fa fa-pencil-square-o" style="font-size:20px"></i> Edit Profile</a>
+                <a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'userprofiles:edit_profile' %}" class="btn btn-sm btn-primary shadow-sm"><i class="fa fa-pencil-square-o" style="font-size:20px"></i> Edit Profile</a>
             </div>
           </div>
         </div>
