--- a/templates/registration/edit_profile.html
+++ b/templates/registration/edit_profile.html
@@ -31,7 +31,7 @@
                   </form>
                   <hr>
                   <div class="text-center">
-                    <a class="small" href="{% url 'profile' %}">Back</a>
+                    <a class="small" href="{% url 'userprofiles:profile' %}">Back</a>
                   </div>
                 </div>
               </div>
