--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -33,7 +33,7 @@
                                     <div>
                                         <p>Forgot your password?<a
                                                 href="{% url 'password_reset' %}">Reset it</a>.</p>
-                                        <p>Not a member?<a href="{% url 'register' %}">Register</a>.
+                                        <p>Not a member?<a href="{% url 'userprofiles:register' %}">Register</a>.
                                         </p>
                                     </div>
                                 </div>
