--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -4,7 +4,7 @@
 <h2>You have been logged out</h2>
 <div class="border-top pt-3">
     <form class="form-inline my-2 my-lg-0">
-        <a href="{% url 'home' %}" class="btn btn-outline-secondary">Home</a>
+        <a href="{% url 'userprofiles:home' %}" class="btn btn-outline-secondary">Home</a>
         <a href="{% url 'login' %}" class="btn btn-primary ml-2"><i class="fa fa-sign-in" style="font-size:20px"></i> Log in again</a>
     </form>
 
