--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -2,5 +2,5 @@
 
 {% block content %}
 <h2>Password changed with success!</h2>
-<p>You may now <a href="{% url 'login' %}">log in</a> again.</p>
+<p>You may now <a href="{% url 'userprofiles:login' %}">log in</a> again.</p>
 {% endblock %}
