--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -30,7 +30,7 @@
             <a class="small" href="{% url 'login' %}">Already have an account? Login!</a>
           </div>
           <div class="text-center">
-            <a class="small" href="{% url 'home' %}">Home</a>
+            <a class="small" href="{% url 'userprofiles:home' %}">Home</a>
           </div>
         </div>
       </div>
