--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,7 @@
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+      <a class="navbar-brand" href="{% url 'userprofiles:home' %}"><i class="fa fa-bell-o" ></i></a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
 
@@ -61,6 +62,9 @@
               <a class="dropdown-item" href="{% url 'product:myproducts' %}"><i class="fa fa-shopping-basket" style="font-size:20px"></i> My Products</a>
               {% endif %}
               <a class="dropdown-item" href="{% url 'product:products' %}"><i class="fa fa-shopping-cart" style="font-size:20px"></i> All Products</a>
+              {% if user.userprofile.user_type == 'NGO'%}
+              <a class="dropdown-item" href="{% url 'product:wishlist' %}"><i class="fa fa-heart-o" style="font-size:20px"></i> Wishlist</a>
+              {% endif %}
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-sign-out" style="font-size:20px"></i> Log out</a>
             </div>
