--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>{% block title %}My Site{% endblock %}</title>
+  <title>{% block title %}Προσφέρω{% endblock %}</title>
   <style type="text/css">
     .asteriskField {
       display: none;
@@ -23,18 +23,20 @@
       padding: 0;
       margin: 0;
     }
+    body {
+    background: #eee;
+}
   </style>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'userprofiles:home' %}">My Site</a>
+      <a class="navbar-brand" href="{% url 'userprofiles:home' %} "> <img src="\media\prosfero.jpg" style="width:200px;height:110px;" ></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'userprofiles:home' %}"><i class="fa fa-bell-o" ></i></a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
 
