--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="card o-hidden border-0 shadow-lg my-5">
+<!-- <div class="card o-hidden border-0 shadow-lg my-5"> -->
 
     <div class="container">
 
