--- a/templates/registration/myproducts.html
+++ b/templates/registration/myproducts.html
@@ -16,10 +16,13 @@
     <table id="example" class="table table-bordered" style="width:100%">
         <thead class="thead-light">
             <tr>
+                <th>Edit</th>
+                <th>Status</th>
                 <th>Category</th>
                 <th>Subcategory</th>
-                <th>Title</th>
+                <th>Name</th>
                 <th>Description</th>
+                <th>Received_From_My_Place</th>
                 <th>State_type</th>
                 <th>Image</th>
                 <th>Extra_Image</th>
@@ -28,10 +31,17 @@
         <tbody>
             {% for product in products %}
             <tr>
+                {% if product.status == 'Pending' %}
+                <td><a href="{% url 'product:productdone' product.id %}"><i class="fa fa-check" style="font-size:20px"></i></a></td>
+                {% else %}
+                <td></td>
+                {% endif %}
+                <td>{{product.status}} {{product.productinterest.wished_item.user}}</td>
                 <td>{{product.category}}</td>
                 <td>{{product.subcategory}}</td>
-                <td>{{product.title}}</td>
+                <td>{{product.name}}</td>
                 <td>{{product.description}}</td>
+                <td>{{product.received_from_my_place}}</td>
                 <td>{{product.state_type}}</td>
                 {% if product.image %}
                 <td><img id="myImg" src="{{ product.image.url }}" style="width:100%;max-width:100px"></td>
