--- a/templates/registration/user_profile.html
+++ b/templates/registration/user_profile.html
@@ -16,7 +16,7 @@
             <p><strong>Location: </strong> {{users.userprofile.location}} </p>
             <p><strong>Phone Number: </strong> {{users.userprofile.number}} </p>
             <p><strong>User_type: </strong> {{users.userprofile.user_type}} </p>
-            <a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'product:products' %}"
+            <a class="btn btn-outline-info  btn-sm btn-block" href="{% url 'userprofiles:allngo' %}"
                 class="btn btn-sm btn-primary shadow-sm"><i class="fa fa-reply"
                     style="font-size:20px"></i>Back</a>
         </div>
